# SmartHome

./: .gitignore  README.md  final_prompt.txt
ohos/module/: BUILD.gn  FIRE_module.c  FIRE_module.h  GAS_module.c  GAS_module.h  LCD_module.c  LCD_module.h  LED_module.c  LED_module.h  MQTT_module.c  MQTT_module.h  PIR_module.c  PIR_module.h  TAH_module.c  TAH_module.h  WIFI_module.c  WIFI_module.h  control.c  control.h  main.c  main.h  oled_fonts.h  oled_ssd1306.h  test.c
python/: README.md  requirements.txt
python/app/: .env_example  config.py  database.py  main.py
python/app/api/: ai_chat.py  auth.py  devices.py  messages.py  mqtt_devices.py  scenes.py  schedules.py  sensors.py
python/app/models/: device.py  scene.py  schedule.py  sensor_data.py  user.py
python/app/schemas/: device.py  scene.py  schedule.py  sensor.py  user.py
python/app/services/: ai_service.py  mqtt_service.py  scene_service.py  schedule_service.py  schedule_tasks.py
python/app/utils/: _prompts.py  prompts.py  security.py
python/data/: hongmeng.db
python/test/: mqtt_test.py  test.html  test.py  test2.html  test_device.py
uniapp/: App.vue  main.js  pages.json
uniapp/components/confirm-dialog/: confirm-dialog.vue
uniapp/pages/chat/: chat.vue
uniapp/pages/device/: air.vue  shower.vue
uniapp/pages/environment/: linechart.vue  monitor.vue
uniapp/pages/index/: index.vue
uniapp/pages/login/: login.vue
uniapp/pages/message/: message.vue
uniapp/pages/messageDetail/: messageDetail.vue
uniapp/store/: index.js
uniapp/utils/: api-config.js  scheduleReminder.js
(+2 files in other folders)
