static_library("smart_home") {
    sources = [
        "control.c",
        "FIRE_module.c",
        "GAS_module.c",
        "LCD_module.c",
        "LED_module.c",
        "main.c",
        "MQTT_module.c",
        "oled_ssd1306.c",
        "PIR_module.c",
        "TAH_module.c",
        "WIFI_module.c",
    ]

    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/interfaces/kits/wifiiot_lite",
        "//vendor/hisi/hi3861/hi3861/third_party/lwip_sack/include",
        "//foundation/communication/interfaces/kits/wifi_lite/wifiservice",
        "//third_party/pahomqtt/MQTTPacket/src",
        "//third_party/pahomqtt/MQTTPacket/samples",
        "//vendor/hisi/hi3861/hi3861/components/at/src"
    ]
}